add style section and apace br

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@ height: 2px;
   min-height: 12rem;
 }
 
+section{
+  background-color: rgb(240, 192, 192);
+}
  </style> 
 </head>
 <body>
@@ -194,5 +197,7 @@ height: 2px;
   </div>
 
 </section>
+<br>
+<br>
 </body>
 </html>
