changes in font, section background and add section css style

--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
 <!--fuente: into ligth tow-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text&display=swap" rel="stylesheet">
 
     
 <style>
   body {
   width: auto;
   padding: 5px;
-  margin: 4px;
-  font-family: 'Shadows Into Light Two', cursive;
+  font-family: 'STIX Two Text', serif;
 }
 h1,h2,h3,h4,h5,h6{
-   font-family: 'Shadows Into Light Two', cursive;
+   font-family: 'STIX Two Text', serif;
 }
 
 p{
-  font-family: 'Shadows Into Light', cursive;
+  font-family: 'STIX Two Text', serif;
 }
 .cover{
   height: 400px;
@@ -73,14 +72,27 @@ height: 2px;
 
 .card-title{
   min-height: 3rem;
+  color: black;
 }
 
 .card-text{
   min-height: 12rem;
+  color: black;
 }
 
 section{
-  background-color: rgb(240, 192, 192);
+  background-image: url(img/software1.jpg);
+  padding: 8px;
+  width: auto;
+  background-blend-mode: darken;
+  background-color: rgb(114, 114, 112);
+  color: white;
+}
+
+img{
+  background-color: white ;
+  justify-items: center;
+
 }
  </style> 
 </head>
@@ -167,20 +179,19 @@ section{
 </div>
 </div>
 </section>
-<br>
 
 <section>
 <div class="container bg-mt5">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-6 col-lg-5">
-      <img src="img/codigoweb.png" alt="ilustración codigo web" width="300px">
+      <img src="img/codigoweb.png" alt="ilustración codigo web" width="250px">
     </div>  
   </div>
   <br>
   <div class="row justify-content-center">
      <div class="col-12 col-sm-6 col-lg-5">
       <h3><b>!Aprende algo nuevo cada día. Motívate!</b></h3>
-       <a href="" class="btn btn-info ">Ir a página</a>
+       <a href="" class="btn btn-primary">Ir a página</a>
       </div>
   </div>
   <form action="">
@@ -197,7 +208,6 @@ section{
   </div>
 
 </section>
-<br>
 <br>
 </body>
 </html>
