Font change to roboto italic

--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
 <!--fuente: into ligth tow-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=STIX+Two+Text&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
 
     
 <style>
   body {
   width: auto;
   padding: 0px;
-  font-family: 'STIX Two Text', serif;
+  font-family: 'Roboto', sans-serif;
 }
 h1,h2,h3,h4,h5,h6{
-   font-family: 'STIX Two Text', serif;
+   font-family: 'Roboto', sans-serif;
 }
 
 p{
-  font-family: 'STIX Two Text', serif;
+  font-family: 'Roboto', sans-serif;
 }
 .cover{
   height: 400px;
@@ -94,6 +94,7 @@ img{
   justify-items: center;
 
 }
+
  </style> 
 </head>
 <body>
@@ -125,6 +126,7 @@ img{
 </div>
 </header>
 
+
 <!--tarjetas-->
 <section>
 <div class="container bg-mt5">
@@ -142,7 +144,6 @@ img{
     </div>
   </div>
   </div>
-
 
 <!--tarejeta 2-->
 
@@ -179,6 +180,8 @@ img{
 </div>
 </div>
 </section>
+
+
 
 <section>
 <div class="container bg-mt5">
