tira de productos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 <style>
   body {
   width: auto;
-  padding: 0px;
   font-family: 'Roboto', sans-serif;
 }
 h1,h2,h3,h4,h5,h6{
@@ -181,7 +180,7 @@ img{
 </div>
 </section>
 
-
+<!-- seccion informatica y correo -->
 
 <section>
 <div class="container bg-mt5">
@@ -209,7 +208,50 @@ img{
   </form>
     </div>
   </div>
+</section>
 
+<!-- Tira de productos -->
+
+<section>
+  <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3">
+    <div>
+      <div class="card">
+          <div title="windows 11, se hacen pruebas del nuevo sistema operativo de microsoft" class="cover cover-small3" style="background-image: url(img/windows11.jpg);">
+          </div>
+        <div class="card-body">
+          <h3 class="card-title"><b>Windows 11</b></h3>
+          <p class="card-text">Los estrictos requisitos de Windows 11 siguen dando de qué hablar. No solo porque dejarían de lado a una gran cantidad
+          de ordenadores, sino por las idas y vueltas de Microsoft.</p>
+        </div>
+      </div>
+    </div>  
+
+    <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3">
+      <div>
+        <div class="card">
+            <div title="windows 11, se hacen pruebas del nuevo sistema operativo de microsoft" class="cover cover-small3" style="background-image: url(img/windows11.jpg);">
+            </div>
+          <div class="card-body">
+            <h3 class="card-title"><b>Windows 11</b></h3>
+            <p class="card-text">Los estrictos requisitos de Windows 11 siguen dando de qué hablar. No solo porque dejarían de lado a una gran cantidad
+            de ordenadores, sino por las idas y vueltas de Microsoft.</p>
+          </div>
+        </div>
+      </div> 
+      
+      <div class="col-12 col-sm-6 col-md-4 col-lg-3 mt-3">
+        <div>
+          <div class="card">
+              <div title="windows 11, se hacen pruebas del nuevo sistema operativo de microsoft" class="cover cover-small3" style="background-image: url(img/windows11.jpg);">
+              </div>
+            <div class="card-body">
+              <h3 class="card-title"><b>Windows 11</b></h3>
+              <p class="card-text">Los estrictos requisitos de Windows 11 siguen dando de qué hablar. No solo porque dejarían de lado a una gran cantidad
+              de ordenadores, sino por las idas y vueltas de Microsoft.</p>
+            </div>
+          </div>
+        </div>  
+  </div>
 </section>
 <br>
 </body>
